[package]
name = "hitokoto-rust"
version = "0.1.0"
authors = ["Woshiluo Luo <woshiluo.luo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"

serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

httparse = "1.3"

rand = "0.8"

log = "0.4"
pretty_env_logger = "0.4"
